test/sema/null-check-analysis/null-check-extra-unwrap-early-exit.delta
// RUN: %check_errors %not %delta -typecheck %s

void foo(int*? p) {
    if (p == null) {
        return;
    }
    defer println("foo");
    // CHECK: [[@LINE+1]]:16: error: cannot unwrap non-optional type 'int*'
    var a = *(p!);
}
